 - added frontend-side support of quotes and triger expression validation (Eugene)
 - added availability to show negative values in graphs (Artem) 
 - developed database monitoring via ODBC (Eugene)
 - added availability to export/import templates for hosts (Artem)
 - changed how is showed messages (Artem)
 - added login/logout (Artem)

Changes for 1.4.3:

 - [ZBX-69] eliminated compilation warnings "_GNU_SOURCE redefined" (Alexei)
 - [DEV-19] Add support of IPv6 for windows agent (Sasha)
 - [DEV-23] Autodiscovery for IPv6 (Sasha)
 - [DEV-17] Add support of IPv6 to standard library (comms.c) (Sasha)
 - [DEV-21] extended size of IP fields to accept IPv6 style IPs (Alexei)
 - [DEV-21] added basic validation of IPv6 IP addresses in GUI (Alexei)
 - [DEV-18] database schema enhanced for IPv6 addresses (Alexei)
 - [DEV-20] support of --enable-ipv6 for configure.in (Alexei)
 - added synchronisation of last value and timestamp for DM (Alexei)
 - [ZBX-1] fixed wrong status of function "nodata" after server restart (Sasha)
 - [ZBX-33] fixed problem in table names in data.sql for PostgreSQL (Sasha)
 - [ZBX-32] fixed incorrect processing of IP ranges in ip_in_list (Sasha)
 - [ZBX-35] fixed processing of PROFILE related macros (Alexei)
 - support of macro {ITEM.LASTVALUE} for notifications and trigger names (Alexei)
 - fixed SQL statement in SLA processing. Thanks to Aron Ujvari. (Alexei)
 - updated Spanish translation. Thanks to Ignacio Martin. (Alexei) 
 - [ZBX-24] fixed Queue to show status of current node only (Alexei)
 - support of encoding of log files to displayed encoding (Alexei)
 - [ZBX-12] fixed calculations in ZABBIX availability report (Alexei)
 - [ZBX-11] fixed Free BSD 4.x 64 bit-related issues (Alexei)
 - [ZBX-10] added Russian translation. Thanks to Hiddenman. (Alexei)
 - fixed PostgreSQL error in synchronization of graphs (Alexei)
 - minor grammar fixes (Alexei)
 - fixed compilation of ZABBIX agent under Mac OS/X (Alexei)