@@ -13,6 +13,7 @@ Changes for 1.5:
 
 Changes for 1.4.3:
 
+ - [ZBX-70] fixed even more compilation warnings (Alexei)
  - [ZBX-69] eliminated compilation warnings "_GNU_SOURCE redefined" (Alexei)
  - [DEV-19] Add support of IPv6 for windows agent (Sasha)
  - [DEV-23] Autodiscovery for IPv6 (Sasha)
